--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/workout-app
+MONGO_URI=mongodb+srv://ariegafni18:ariegafni18@arie.xkhfs.mongodb.net/Fitnesstraining?retryWrites=true&w=majority&appName=arie
