--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://ariegafni18:ariegafni18@arie.xkhfs.mongodb.net/Fitnesstraining?retryWrites=true&w=majority&appName=arie
+MONGO_URI=mongodb+srv://ariegafni18:arie1234@arie.xkhfs.mongodb.net/fitness_training?retryWrites=true&w=majority
+
